tests/e2e/authz-server/envoy/allow/policy-http.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/playground/refs/heads/main/schemas/json/v3/validatingpolicy-policies.kyverno.io-v1alpha1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: policy-http
spec:
  evaluation:
    mode: HTTP
  validations:
  - expression: >
      http.Allowed().Response()
